--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			</div>
 			<!-- Grupo: Mensaje -->
 			<div class="formulario__grupo" id="grupo__mensaje">
-				<label for="mensaje" class="formulario__label">Mensaje</label>
+				<label for="mensaje" class="formulario__label msj">Mensaje</label>
 				<div class="formulario__grupo-input">
 					<textarea class="formulario__input" name="mensaje" id="mensaje" placeholder="Mensaje" required></textarea>
 				</div>
